--- a/app/public/home.html
+++ b/app/public/home.html
@@ -12,7 +12,7 @@
 
     <!-- Font Awesome Glyphicons -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
             <div class="container">
                 <p>
                     <a href="/api/friends">API Friends List</a> |
-                    <a href="https://github.com/afhaque/friendfinder">GitHub Repo</a>
+                    <a href="https://github.com/iggy788/FriendFinder">GitHub Repo</a>
                 </p>
             </div>
         </footer>
